WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189607
REGRESSION (
r235962
-
r235963
): Layout Test animations/suspend-resume-animation-events.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=189607
Summary
REGRESSION (r235962-r235963): Layout Test animations/suspend-resume-animation...
Ryan Haddad
Reported
2018-09-13 18:17:45 PDT
The following layout test is flaky on High Sierra Debug WK2 and Sierra Debug WK2 animations/suspend-resume-animation-events.html Probable cause: Seems to have started with
https://trac.webkit.org/changeset/235962/webkit
or
https://trac.webkit.org/changeset/235963/webkit
Flakiness Dashboard:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=animations%2Fsuspend-resume-animation-events.html
https://build.webkit.org/results/Apple%20High%20Sierra%20Debug%20WK2%20(Tests)/r235988%20(4851)/results.html
--- /Volumes/Data/slave/highsierra-debug-tests-wk2/build/layout-test-results/animations/suspend-resume-animation-events-expected.txt +++ /Volumes/Data/slave/highsierra-debug-tests-wk2/build/layout-test-results/animations/suspend-resume-animation-events-actual.txt @@ -3,6 +3,5 @@ Log start animation move -iteration animation move end animation move
Attachments
Patch
(4.09 KB, patch)
2018-09-21 06:02 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews104 for mac-sierra-wk2
(2.99 MB, application/zip)
2018-09-21 07:18 PDT
,
EWS Watchlist
no flags
Details
Patch
(4.89 KB, patch)
2018-09-21 07:30 PDT
,
Antoine Quint
dino
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Truitt Savell
Comment 1
2018-09-14 16:54:36 PDT
I am able to reproduce this failure using command: run-webkit-tests --root debug-236000 animations/suspend-resume-animation-events.html --iterations 500 -f it tends to fail 2-6 times within the first 50 iterations. issue also reproduces farther back than its first appearance on history indicating that the failure is part of the runner in some way or a state in test is being set.
Radar WebKit Bug Importer
Comment 2
2018-09-20 13:14:59 PDT
<
rdar://problem/44652315
>
Ryan Haddad
Comment 3
2018-09-20 14:33:10 PDT
Marked test as flaky in
https://trac.webkit.org/r236282
Antoine Quint
Comment 4
2018-09-21 06:02:31 PDT
Created
attachment 350351
[details]
Patch
EWS Watchlist
Comment 5
2018-09-21 07:18:44 PDT
Comment on
attachment 350351
[details]
Patch
Attachment 350351
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/9295773
New failing tests: legacy-animation-engine/animations/added-while-suspended.html animations/added-while-suspended.html
EWS Watchlist
Comment 6
2018-09-21 07:18:46 PDT
Created
attachment 350358
[details]
Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Antoine Quint
Comment 7
2018-09-21 07:30:27 PDT
Created
attachment 350361
[details]
Patch
Dean Jackson
Comment 8
2018-09-21 09:41:09 PDT
Comment on
attachment 350361
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=350361&action=review
> LayoutTests/animations/suspend-resume-animation-events.html:1 > +<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "
http://www.w3.org/TR/html4/loose.dtd
"><!-- webkit-test-runner [ experimental:WebAnimationsCSSIntegrationEnabled=true ] -->
just make this <!doctype html><!-- webkit...
Antoine Quint
Comment 9
2018-09-21 09:57:55 PDT
https://trac.webkit.org/changeset/236323/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug