REGRESSION (r235962-r235963): Layout Test animations/suspend-resume-animation-events.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=189607 <rdar://problem/44652315>

Reviewed by Dean Jackson.

Source/WebCore:

There is no reason we shouldn't return the document timeline's time when suspended as otherwise animations may
report an unresolved current time when suspended which would wreak havoc when invalidating what DOM events to
dispatch for CSS Animations and Transitions. We also shouldn't be invalidation DOM events when suspended.

* animation/DocumentTimeline.cpp:
(WebCore::DocumentTimeline::currentTime):
(WebCore::DocumentTimeline::DocumentTimeline::performInvalidationTask):

LayoutTests:

* animations/suspend-resume-animation-events.html: Ensure the test always opts into Web Animations backing CSS Animations and Transitions.
* platform/mac-wk2/TestExpectations: Mark the test as no longer flaky.

Canonical link: https://commits.webkit.org/204792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236323 268f45cc-cd09-0410-ab3c-d52691b4dbfc